# Register

./: .gitattributes  README.md  build.gradle  settings.gradle
app/: build.gradle
app/libs/: openCVLibrary310-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: index.html
app/src/main/cpp/: Bmp2Mat.cpp  Bmp2Mat.h  CMakeLists.txt  FaceDetection.cpp  FaceDetection.h  native-lib.cpp
app/src/main/java/com/example/myapplication/: CSV_rw.java  FaceDetection.java  MainActivity.java  Member.java  MemberInfo.java  MemberInfo_Adaper.java  Member_Edit.java  Register_Adaper.java  SQL.java  Search_day.java  Search_month.java  SendMail.java  Touch_Register.java  WebService.java
app/src/main/res/layout/: activity_main.xml  activity_member.xml  activity_member_edit.xml  activity_search_day.xml  activity_search_month.xml  activity_touch_register.xml  member_info.xml  member_register.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
ncnn_id/: build.gradle  local.properties  proguard-rules.pro
ncnn_id/gradle/wrapper/: gradle-wrapper.properties
ncnn_id/src/main/: AndroidManifest.xml
ncnn_id/src/main/assets/: ncnn_id.param  ncnn_landmark.param
ncnn_id/src/main/java/com/viatech/idlib/: AssetCopyer.java  DigitDetector.java
ncnn_id/src/main/jni/: CMakeLists.txt  cam.cpp  squeezencnn_jni.cpp  squeezencnn_jni.h
ncnn_id/src/main/jni/ncnn/include/: net.h
